<resources>
    <string name="app_name">AlAnsariEX</string>
    <string name="google_app_id1">00000000</string>
    <string name="dummy_data">Dummy Data.</string>
    <string name="mobile_number">Mobile number</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="dummy_mobile_number">9041411410</string>
    <string name="mobile_login_details">Your registered mobile number with Al Ansari Exchange</string>
    <string name="email_login_details"></string>
    <string name="eexchange">eExchange</string>
    <string name="eexchange_login_details">Your existing eExchange account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">"  "Login here</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="enter_eexchange_email">Enter eExchange email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register_email_attempts_msg">You have upto 3 attempts. \nWrong credentials may result in your eExchange account getting blocked.</string>
    <string name="enter_emirates_id_number">Enter Emirates ID number</string>
    <string name="enter_eid_expiry">Enter expiry date of your Emirates ID</string>
    <string name="enter_date_of_birth">Enter your date of birth</string>
    <string name="enter_emirates_id_card_number">Enter Emirates ID card number</string>
    <string name="please_enter_pin">Please enter PIN</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_pin13">Please enter PIN</string>
    <string name="please_enter_pin133">Please enter PIN</string>
    <string name="send_money">SEND MONEY</string>
    <string name="click_here_to_go">CLICK HERE TO GO</string>
    <string name="my_recipients">My\nRecipients</string>
    <string name="my_referral">Win\nExciting\nRewards</string>
    <string name="transaction_tracker_post">Transaction\nTracker</string>
    <string name="my_transactions">My\nTransactions</string>
    <string name="rate_calculator">Rate Calculator</string>
    <string name="know_our_rates">Know our transfer rates</string>
    <string name="currency_convertor">Currency Convertor</string>
    <string name="transaction_tracker">Transaction Tracker</string>
    <string name="check_transaction_status">Check Transaction Status</string>
    <string name="register_login">REGISTER / LOGIN</string>
    <string name="click_here_to_start">CLICK HERE TO START</string>
    <string name="buy_sell_currency">Buy/Sell foreign currency</string>
    <string name="get_in_touch">Contact Us</string>
    <string name="lets_know_feedback">Lets know your feedback</string>
    <string name="branch_locator">Branch Locator</string>
    <string name="find_nearest">Find our nearest branch</string>
    <string name="you_have_total_pending_transactions">You have 5 pending transactions</string>
    <string name="quick_send">QUICK SEND</string>
    <string name="am_beneficiary_message">Add and manage your beneficiaries here for sending money</string>
    <string name="am_credit_card_message">Pay all of your credit card due payments by adding and managing credit cards here</string>
    <string name="am_bank_account_message">Add your local bank details to complete send money process via online bank transfer</string>
    <string name="transfer_would_take_upto_days_to_complete">Transfer would take upto 1 day to complete</string>
    <string name="currency_not_available_for_selected_country">Currency not available for selected country</string>
    <string name="currency_not_available_for_selected_country_try_again">Currency not available for selected country. Please try again after some time.</string>
    <string name="malaysia_msg">1) Corporate beneficiary transactions to be made in USD, if the purpose is TRADE/INVESTMENT/PROPERTY PURCHASE/STOCK PURCHASES\n\n
2) Maximum limit for individual transactions is MYR 30,000\n\n
3) Funds will be credited in the beneficiary account within 2-3 working days</string>
    <string name="beneficiary_name">Beneficiary name</string>
    <string name="beneficiary_agent_bank">Beneficiary bank/Agent</string>
    <string name="beneficiary_branch">Beneficiary branch</string>
    <string name="beneficiary_branch_payout">Payout Location</string>
    <string name="account_number">Account number</string>
    <string name="receive_amount">Receiving amount</string>
    <string name="received_amount">Received amount</string>
    <string name="your_txn_ref_num">Transaction reference number</string>
    <string name="payment_mode">Payment mode</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="aae_bank_account_number">Ansari bank account number</string>
    <string name="aae_bank_name">Ansari bank name</string>
    <string name="total_paid">Total paid</string>
    <string name="total_to_pay">Total to pay</string>
    <string name="fee_aed_0_00">Fee : AED 0.00</string>
    <string name="fee_aed">Fee : AED </string>
    <string name="contact_number">Contact number</string>
    <string name="account_name">Account name</string>
    <string name="bank_name">Bank name</string>
    <string name="branch_name">Branch name</string>
    <string name="iban_number">IBAN</string>
    <string name="ifsc_code">IFSC</string>
    <string name="swift_code">Swift code</string>
    <string name="sort_code">Sort code</string>
    <string name="transit_code">Transit code</string>
    <string name="institution_code">Institution code</string>
    <string name="routing_code">Routing code</string>
    <string name="bsb">BSB</string>
    <string name="account_type">Account type</string>
    <string name="beneficiary_bank_agent">Beneficiary bank/Agent</string>
    <string name="bank_name_agent">Bank/Agent name</string>
    <string name="transaction_mode">Transaction mode</string>
    <string name="transaction_number">Transaction Number</string>
    <string name="service_type">Service type</string>
    <string name="beneficiary_type">Beneficiary type</string>
    <string name="empty_beneficiary_arex">No beneficiaries available - you can add some by tapping  add new sign at the top of the screen</string>
    <string name="empty_beneficiary_ce">No beneficiaries available - you can add some by tapping  add new sign at the top of the screen</string>
    <string name="empty_beneficiary_wu">No beneficiaries available - you can add some by tapping add new button at the bottom of the screen</string>
    <string name="error_beneficiary">Whoops! We are unable to show your beneficiaries at the moment.</string>
    <string name="invalid_company_name">Invalid company name</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="invalid_country">Invalid country</string>
    <string name="invalid_nationality">Invalid nationality</string>
    <string name="invalid_address">Invalid address</string>
    <string name="required_format_is">Required mobile no. length is %s</string>
    <string name="required_account_num_format_is">Required account number length is %s</string>
    <string name="invalid_branch_name">Invalid branch name</string>
    <string name="invalid_ifsc_code">Invalid IFSC</string>
    <string name="invalid_account_number">Invalid Account number</string>
    <string name="invalid_iban_number">Invalid IBAN</string>
    <string name="invalid_swift_code">Invalid Swift code</string>
    <string name="invalid_sort_code">Invalid Sort code</string>
    <string name="invalid_transit_code">Invalid Transit code</string>
    <string name="invalid_institution_code">Invalid Institution code</string>
    <string name="invalid_routing_code">Invalid Routing code</string>
    <string name="invalid_bsb">Invalid BSB</string>
    <string name="invalid_account_type">Invalid account type</string>
    <string name="country_incorporation">Country of Incorporation</string>
    <string name="invalid_incorporation">Invalid Country of Incorporation</string>
    <string name="nationality_star">Nationality*</string>
    <string name="cardholder_name">Cardholder name</string>
    <string name="card_type">Card type</string>
    <string name="card_number">Card number</string>
    <string name="enter_card_number">Enter Card number</string>
    <string name="scheme_name">Scheme name</string>
    <string name="payment_date">Payment date</string>
    <string name="reminder">Reminder</string>
    <string name="days_in_advance">days in advance</string>
    <string name="invalid_cardholder_name">Invalid cardholder name</string>
    <string name="invalid_bank_name">Invalid bank name</string>
    <string name="invalid_card_number">Invalid card number</string>
    <string name="invalid_payment_date">Invalid payment date</string>
    <string name="empty_credit_card_list">No credit cards added here - you can add some using the add new  sign at the top of the screen</string>
    <string name="error_credit_card_list">Whoops! We are unable to show your credit cards at the moment.</string>
    <string name="empty_travel_card_list">No saved travel cards available - you can add some by tapping the add new button at the top of the screen</string>
    <string name="error_travel_card_list">Whoops! We are unable to show your travel cards at the moment.</string>
    <string name="empty_bank_account_list">No bank account added here - you can add some using the add new sign at the top of the screen</string>
    <string name="error_bank_account_list">Whoops! We are unable to show your bank accounts at the moment.</string>
    <string name="pm_pay_at_branch_dialog_title">Transaction pending</string>
    <string name="pm_pay_at_branch_dialog_text">You have 4 hours to pay for the transaction at any Al Ansari Exchange branch.</string>
    <string name="pm_bank_transfer_dialog_title">Reference number pending</string>
    <string name="pm_bank_transfer_dialog_text">Enter bank transfer reference number in Transaction details /Pending transactions to complete.</string>
    <string name="pm_priority_pay_dialog_title">Transaction pending</string>
    <string name="pm_priority_pay_dialog_text">Fund receipt confirmation will be done on priority. Additional charges apply for priority services.</string>
    <string name="pm_priority_transaction_pending_text"><b>Transaction will be confirmed immediately. Additional charges apply.</b></string>
    <string name="choose_aae_bank">Choose the Bank you would like to transfer funds from</string>
    <string name="aae_bank_details">Al Ansari Exchange bank details:</string>
    <string name="aae_bank_acc_name">Account name: Al Ansari Exchange LLC</string>
    <string name="charges_applicable">*Charges applicable</string>
    <string name="for_assistance_call">For assistance call</string>
    <string name="bt_payment_details_msg">Transaction will be processed upon fund confirmation only. It may vary between 4 to 24 hours.</string>
    <string name="payment_gateway_exit_dialog_title">Cancel transaction?</string>
    <string name="payment_gateway_exit_dialog_text">Do you want to cancel this transaction?</string>
    <string name="confirm_delete_bank_account">Are you sure to delete this bank account?</string>
    <string name="enter_email_id">Enter email-id</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">Save</string>
    <string name="btn_continue">Continue</string>
    <string name="charges">Charges</string>
    <string name="txt_inclusive_sending_changes_nd_pmt_crgs">*inclusive of sending charge and payment mode charges.</string>
    <string name="star">*</string>
    <string name="txt_track_transfer">Track Transfer</string>
</resources>