<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogCardView">

    <!--@dimen/layout_width-->

    <ScrollView
        style="@style/DialogScrollView"
        android:padding="@dimen/dimens_8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_title"
                style="@style/DialogTitleTextView" />

            <TextView
                android:id="@+id/dialog_text"
                style="@style/DialogTextView"
                fontPath="fonts/Roboto-Regular.ttf"
                android:layout_below="@+id/dialog_title"
                android:gravity="left"
                android:paddingLeft="@dimen/dimens_4"
                android:paddingRight="@dimen/dimens_0"
                android:paddingTop="@dimen/dimens_12"
                android:text="@string/confirm_delete_bank_account"
                android:textColor="@color/color504F50"
                android:textSize="@dimen/dimens_13sp"
                android:visibility="visible" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/DialogTextInputLayout"
                android:layout_below="@+id/dialog_text"
                android:visibility="gone"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/email"
                    style="@style/DialogEditText"
                    android:hint="@string/enter_email_id" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/email_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_0.5"
                android:layout_below="@+id/email_layout"
                android:layout_marginTop="@dimen/dimens_3"
                android:background="@color/color3F3F3F"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_view"
                android:layout_marginTop="@dimen/dimens_30"
                android:paddingBottom="@dimen/dimens_8"
                android:visibility="visible"
                android:weightSum="1">

                <Button
                    android:id="@+id/dialog_btn_no"
                    style="@style/SubmitOutlineBtnDialog"
                    android:layout_width="@dimen/dimens_0"
                    android:layout_marginLeft="@dimen/dimens_0"
                    android:layout_weight="0.5"
                    android:text="@string/btn_cancel"
                    android:textColor="@color/color1E6AB3" />

                <Button
                    android:id="@+id/dialog_btn_yes"
                    style="@style/SubmitBtnDialog"
                    android:layout_width="@dimen/dimens_0"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/dimens_0"
                    android:layout_weight="0.5"
                    android:text="@string/btn_delete" />
            </LinearLayout>

            <Button
                android:id="@+id/single_btn"
                style="@style/SubmitBtn"
                android:layout_below="@+id/email_view"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dimens_8"
                android:layout_marginTop="@dimen/dimens_30"
                android:text="@string/btn_exit"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>