<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogCardView">

    <!--@dimen/layout_width-->

    <ScrollView style="@style/DialogScrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_title"
                style="@style/DialogTitleTextView"
                android:text="@string/pm_priority_pay_dialog_title" />


            <TextView
                android:id="@+id/dialog_text"
                style="@style/DialogTextView"
                android:layout_below="@+id/dialog_title"
                android:text="@string/pm_priority_pay_dialog_text"
                android:visibility="visible" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_0.5"
                android:layout_below="@+id/dialog_text"
                android:layout_marginBottom="@dimen/dimens_14"
                android:layout_marginTop="@dimen/dimens_18"
                android:background="@color/colorA4A4A4" />

            <TextView
                android:id="@+id/sending_amount_label"
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:paddingBottom="@dimen/dimens_8"
                android:paddingLeft="@dimen/dimens_4"
                android:text="Sending amount:"
                android:textColor="@color/color7F8486"
                android:textSize="@dimen/dimens_14sp" />

            <TextView
                android:id="@+id/sending_amount"
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/divider"
                android:paddingBottom="@dimen/dimens_8"
                android:paddingEnd="@dimen/dimens_4"
                android:text="105"
                android:textColor="@color/color7F8486"
                android:textSize="@dimen/dimens_14sp" />

            <LinearLayout
                android:id="@+id/changes_layout"
                android:layout_width="wrap_content"
                android:layout_below="@+id/sending_amount_label"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/charge_label"
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dimens_8"
                    android:paddingStart="@dimen/dimens_4"
                    android:text="@string/charges"
                    android:textColor="@color/color7F8486"
                    android:textSize="@dimen/dimens_14sp" />

                <TextView
                    android:text="@string/star"
                    android:textColor="@color/cpb_red"
                    android:layout_width="wrap_content"
                    android:paddingBottom="@dimen/dimens_2"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/charge"
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/sending_amount_label"
                android:paddingBottom="@dimen/dimens_8"
                android:paddingRight="@dimen/dimens_4"
                android:text="105"
                android:textColor="@color/color7F8486"
                android:textSize="@dimen/dimens_14sp" />

            <TextView
                android:id="@+id/txn_amount_label"
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/changes_layout"
                android:paddingBottom="@dimen/dimens_8"
                android:paddingLeft="@dimen/dimens_4"
                android:text="Total to pay:"
                android:textColor="@color/color7F8486"
                android:textSize="@dimen/dimens_14sp" />

            <TextView
                android:id="@+id/txn_amount"
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/changes_layout"
                android:paddingBottom="@dimen/dimens_8"
                android:paddingEnd="@dimen/dimens_4"
                android:text="105"
                android:textColor="@color/color7F8486"
                android:textSize="@dimen/dimens_14sp" />

            <LinearLayout
                android:id="@+id/btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txn_amount"
                android:layout_marginTop="@dimen/dimens_30"
                android:paddingBottom="@dimen/dimens_4"
                android:visibility="visible"
                android:weightSum="1">

                <Button
                    android:id="@+id/dialog_btn_no"
                    style="@style/SubmitOutlineBtnDialog"
                    android:layout_width="@dimen/dimens_0"
                    android:layout_marginLeft="@dimen/dimens_0"
                    android:layout_weight="0.5"
                    android:text="@string/btn_cancel"
                    android:textColor="@color/color1E6AB3" />

                <Button
                    android:id="@+id/dialog_btn_yes"
                    style="@style/SubmitBtnDialog"
                    android:layout_width="@dimen/dimens_0"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/dimens_0"
                    android:layout_weight="0.5"
                    android:text="@string/btn_continue" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_layout"
                android:textColor="@color/cpb_red"
                android:text="@string/txt_inclusive_sending_changes_nd_pmt_crgs"
                android:textSize="@dimen/dimens_10sp" />

        </RelativeLayout>
    </ScrollView>

</android.support.v7.widget.CardView>