<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogCardView"
    android:layout_margin="@dimen/dimens_20">

    <!--@dimen/layout_width-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            style="@style/DialogTextView3" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/DialogTextInputLayout"
            android:visibility="gone"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/email2"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                fontPath="fonts/HelveticaNeue.ttf"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:hint="@string/enter_email_id"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>



        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            fontPath="fonts/HelveticaNeue.ttf"
            android:textColor="@color/colorBlack"
            android:hint="Email Id"
            android:textColorHint="@color/cpb_grey"
            android:inputType="textEmailAddress" />


        <LinearLayout
            android:layout_marginLeft="@dimen/dimens_5"
            android:layout_marginRight="@dimen/dimens_5"
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_view"
            android:layout_marginTop="@dimen/dimens_10"
            android:paddingBottom="@dimen/dimens_8"
            android:visibility="visible"
            android:weightSum="1">

            <Button
                android:id="@+id/dialog_btn_cancel"
                style="@style/SubmitOutlineBtnDialog"
                android:layout_width="@dimen/dimens_0"
                android:layout_marginLeft="@dimen/dimens_0"
                android:layout_weight="0.5"
                android:text="@string/btn_cancel"
                android:textColor="@color/color1E6AB3" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/SubmitBtnDialog"
                android:layout_width="@dimen/dimens_0"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dimens_0"
                android:layout_weight="0.5"
                android:text="@string/btn_submit" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>